2009-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* cedet/semantic/ctxt.el (semantic-get-local-variables): Disable
	the progress reporter entirely.

2009-11-08  Kevin Ryde  <user42@zip.com.au>

	* emacs-lisp/checkdoc.el (checkdoc-proper-noun-regexp): Match noun
	at end of sentence (Bug#4818).

2009-11-08  Jared Finder  <jfinder@crypticstudios.com>

	* progmodes/compile.el (compilation-error-regexp-alist-alist):
	Handle "see declaration of" MSFT statements (Bug#4100).

2009-11-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-advice-make-auto-save-file-name)
	(tramp-advice-file-expand-wildcards): Unload via
	`ad-remove-advice'.

	* net/trampver.el: Update release number.

2009-11-08  Kevin Ryde <user42@zip.com.au>

	* net/tramp.el (tramp-advice-file-expand-wildcards): Don't rely on
	`ad-do-it'.

2009-11-08  Andr <m00naticus@gmail.com>  (tiny change)

	* net/tramp.el (tramp-handle-write-region): Copy but rename temp file,
	in order to keep context in SELinux.

2009-11-08  Chong Yidong  <cyd@stupidchicken.com>

	* dired-aux.el (dired-query): Place cursor in echo area and allow
	C-g.

	* dired.el (dired-mode-map): Disable dired-maybe-insert-subdir
	menu item if not on a directory (Bug#4701).

2009-11-07  Michael Albinus  <michael.albinus@gmx.de>

	Sync with Tramp 2.1.17.

	* net/tramp.el (tramp-handle-copy-directory): Don't use
	`file-remote-p' (due to compatibility).

	* net/tramp-compat.el (tramp-compat-copy-directory)
	(tramp-compat-delete-directory): New defuns.

	* net/tramp-fish.el (tramp-fish-handle-delete-directory):
	* net/tramp-gvfs.el (tramp-gvfs-handle-delete-directory): Use
	`tramp-compat-delete-directory'.

	* net/tramp-smb.el (tramp-smb-handle-copy-directory)
	(tramp-smb-handle-delete-directory ): Use
	`tramp-compat-copy-directory' and `tramp-compat-delete-directory'.

	* net/trampver.el: Update release number.

2009-11-07  Chong Yidong  <cyd@stupidchicken.com>

	* tar-mode.el (tar-copy): Call write-region on the right buffer